compiler/src/antlr4/ErlangParser.cpp

// Generated from Erlang.g4 by ANTLR 4.6


#include "ErlangListener.h"
#include "ErlangVisitor.h"

#include "ErlangParser.h"


using namespace antlrcpp;
using namespace antlr4;

ErlangParser::ErlangParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ErlangParser::~ErlangParser() {
  delete _interpreter;
}

std::string ErlangParser::getGrammarFileName() const {
  return "Erlang.g4";
}

const std::vector<std::string>& ErlangParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ErlangParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FormsContext ------------------------------------------------------------------

ErlangParser::FormsContext::FormsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ErlangParser::FormsContext::EOF() {
  return getToken(ErlangParser::EOF, 0);
}

std::vector<ErlangParser::FormContext *> ErlangParser::FormsContext::form() {
  return getRuleContexts<ErlangParser::FormContext>();
}

ErlangParser::FormContext* ErlangParser::FormsContext::form(size_t i) {
  return getRuleContext<ErlangParser::FormContext>(i);
}


size_t ErlangParser::FormsContext::getRuleIndex() const {
  return ErlangParser::RuleForms;
}

void ErlangParser::FormsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForms(this);
}

void ErlangParser::FormsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForms(this);
}


antlrcpp::Any ErlangParser::FormsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ErlangVisitor*>(visitor))
    return parserVisitor->visitForms(this);
  else
    return visitor->visitChildren(this);
}

ErlangParser::FormsContext* ErlangParser::forms() {
  FormsContext *_localctx = _tracker.createInstance<FormsContext>(_ctx, getState());
  enterRule(_localctx, 0, ErlangParser::RuleForms);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(197); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(196);
      form();
      setState(199); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (((((_la - 41) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 41)) & ((1ULL << (ErlangParser::TokMinus - 41))
      | (1ULL << (ErlangParser::TokAtom - 41))
      | (1ULL << (ErlangParser::TokAttrName - 41)))) != 0));
    setState(201);
    match(ErlangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FormContext ------------------------------------------------------------------

ErlangParser::FormContext::FormContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ErlangParser::FormContext::TokDot() {
  return getToken(ErlangParser::TokDot, 0);
}

ErlangParser::AttributeContext* ErlangParser::FormContext::attribute() {
  return getRuleContext<ErlangParser::AttributeContext>(0);
}

ErlangParser::FunctionContext* ErlangParser::FormContext::function() {
  return getRuleContext<ErlangParser::FunctionContext>(0);
}


size_t ErlangParser::FormContext::getRuleIndex() const {
  return ErlangParser::RuleForm;
}

void ErlangParser::FormContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForm(this);
}

void ErlangParser::FormContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForm(this);
}


antlrcpp::Any ErlangParser::FormContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ErlangVisitor*>(visitor))
    return parserVisitor->visitForm(this);
  else
    return visitor->visitChildren(this);
}

ErlangParser::FormContext* ErlangParser::form() {
  FormContext *_localctx = _tracker.createInstance<FormContext>(_ctx, getState());
  enterRule(_localctx, 2, ErlangParser::RuleForm);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(205);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ErlangParser::TokMinus:
      case ErlangParser::TokAttrName: {
        setState(203);
        attribute();
        break;
      }

      case ErlangParser::TokAtom: {
        setState(204);
        function();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(207);
    match(ErlangParser::TokDot);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TokAtomContext ------------------------------------------------------------------

ErlangParser::TokAtomContext::TokAtomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ErlangParser::TokAtomContext::TokAtom() {
  return getToken(ErlangParser::TokAtom, 0);
}


size_t ErlangParser::TokAtomContext::getRuleIndex() const {
  return ErlangParser::RuleTokAtom;
}

void ErlangParser::TokAtomContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTokAtom(this);
}

void ErlangParser::TokAtomContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTokAtom(this);
}


antlrcpp::Any ErlangParser::TokAtomContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ErlangVisitor*>(visitor))
    return parserVisitor->visitTokAtom(this);
  else
    return visitor->visitChildren(this);
}

ErlangParser::TokAtomContext* ErlangParser::tokAtom() {
  TokAtomContext *_localctx = _tracker.createInstance<TokAtomContext>(_ctx, getState());
  enterRule(_localctx, 4, ErlangParser::RuleTokAtom);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(209);
    match(ErlangParser::TokAtom);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TokVarContext ------------------------------------------------------------------

ErlangParser::TokVarContext::TokVarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ErlangParser::TokVarContext::TokVar() {
  return getToken(ErlangParser::TokVar, 0);
}


size_t ErlangParser::TokVarContext::getRuleIndex() const {
  return ErlangParser::RuleTokVar;
}

void ErlangParser::TokVarContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTokVar(this);
}

void ErlangParser::TokVarContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTokVar(this);
}


antlrcpp::Any ErlangParser::TokVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ErlangVisitor*>(visitor))
    return parserVisitor->visitTokVar(this);
  else
    return visitor->visitChildren(this);
}

ErlangParser::TokVarContext* ErlangParser::tokVar() {
  TokVarContext *_localctx = _tracker.createInstance<TokVarContext>(_ctx, getState());
  enterRule(_localctx, 6, ErlangParser::RuleTokVar);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(211);
    match(ErlangParser::TokVar);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TokFloatContext ------------------------------------------------------------------

ErlangParser::TokFloatContext::TokFloatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ErlangParser::TokFloatContext::TokFloat() {
  return getToken(ErlangParser::TokFloat, 0);
}


size_t ErlangParser::TokFloatContext::getRuleIndex() const {
  return ErlangParser::RuleTokFloat;
}

void ErlangParser::TokFloatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTokFloat(this);
}

void ErlangParser::TokFloatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTokFloat(this);
}


antlrcpp::Any ErlangParser::TokFloatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ErlangVisitor*>(visitor))
    return parserVisitor->visitTokFloat(this);
  else
    return visitor->visitChildren(this);
}

ErlangParser::TokFloatContext* ErlangParser::tokFloat() {
  TokFloatContext *_localctx = _tracker.createInstance<TokFloatContext>(_ctx, getState());
  enterRule(_localctx, 8, ErlangParser::RuleTokFloat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(213);
    match(ErlangParser::TokFloat);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TokIntegerContext ------------------------------------------------------------------

ErlangParser::TokIntegerContext::TokIntegerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ErlangParser::TokIntegerContext::TokInteger() {
  return getToken(ErlangParser::TokInteger, 0);
}


size_t ErlangParser::TokIntegerContext::getRuleIndex() const {
  return ErlangParser::RuleTokInteger;
}

void ErlangParser::TokIntegerContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTokInteger(this);
}

void ErlangParser::TokIntegerContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTokInteger(this);
}


antlrcpp::Any ErlangParser::TokIntegerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ErlangVisitor*>(visitor))
    return parserVisitor->visitTokInteger(this);
  else
    return visitor->visitChildren(this);
}

ErlangParser::TokIntegerContext* ErlangParser::tokInteger() {
  TokIntegerContext *_localctx = _tracker.createInstance<TokIntegerContext>(_ctx, getState());
  enterRule(_localctx, 10, ErlangParser::RuleTokInteger);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(215);
    match(ErlangParser::TokInteger);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TokCharContext ------------------------------------------------------------------

ErlangParser::TokCharContext::TokCharContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ErlangParser::TokCharContext::TokChar() {
  return getToken(ErlangParser::TokChar, 0);
}


size_t ErlangParser::TokCharContext::getRuleIndex() const {
  return ErlangParser::RuleTokChar;
}

void ErlangParser::TokCharContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTokChar(this);
}

void ErlangParser::TokCharContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTokChar(this);
}


antlrcpp::Any ErlangParser::TokCharContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ErlangVisitor*>(visitor))
    return parserVisitor->visitTokChar(this);
  else
    return visitor->visitChildren(this);
}

ErlangParser::TokCharContext* ErlangParser::tokChar() {
  TokCharContext *_localctx = _tracker.createInstance<TokCharContext>(_ctx, getState());
  enterRule(_localctx, 12, ErlangParser::RuleTokChar);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(217);
    match(ErlangParser::TokChar);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TokStringContext ------------------------------------------------------------------

ErlangParser::TokStringContext::TokStringContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ErlangParser::TokStringContext::TokString() {
  return getToken(ErlangParser::TokString, 0);
}


size_t ErlangParser::TokStringContext::getRuleIndex() const {
  return ErlangParser::RuleTokString;
}

void ErlangParser::TokStringContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTokString(this);
}

void ErlangParser::TokStringContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTokString(this);
}


antlrcpp::Any ErlangParser::TokStringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ErlangVisitor*>(visitor))
    return parserVisitor->visitTokString(this);
  else
    return visitor->visitChildren(this);
}

ErlangParser::TokStringContext* ErlangParser::tokString() {
  TokStringContext *_localctx = _tracker.createInstance<TokStringContext>(_ctx, getState());
  enterRule(_localctx, 14, ErlangParser::RuleTokString);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(219);
    match(ErlangParser::TokString);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeContext ------------------------------------------------------------------

ErlangParser::AttributeContext::AttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ErlangParser::AttributeContext::TokMinus() {
  return getToken(ErlangParser::TokMinus, 0);
}

ErlangParser::TokAtomContext* ErlangParser::AttributeContext::tokAtom() {
  return getRuleContext<ErlangParser::TokAtomContext>(0);
}

ErlangParser::AttrValContext* ErlangParser::AttributeContext::attrVal() {
  return getRuleContext<ErlangParser::AttrValContext>(0);
}

ErlangParser::TypedAttrValContext* ErlangParser::AttributeContext::typedAttrVal() {
  return getRuleContext<ErlangParser::TypedAttrValContext>(0);
}

tree::TerminalNode* ErlangParser::AttributeContext::TokParenOpen() {
  return getToken(ErlangParser::TokParenOpen, 0);
}

tree::TerminalNode* ErlangParser::AttributeContext::TokParenClose() {
  return getToken(ErlangParser::TokParenClose, 0);
}

tree::TerminalNode* ErlangParser::AttributeContext::TokAttrName() {
  return getToken(ErlangParser::TokAttrName, 0);
}

ErlangParser::TypeSpecContext* ErlangParser::AttributeContext::typeSpec() {
  return getRuleContext<ErlangParser::TypeSpecContext>(0);
}


size_t ErlangParser::AttributeContext::getRuleIndex() const {
  return ErlangParser::RuleAttribute;
}

void ErlangParser::AttributeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttribute(this);
}

void ErlangParser::AttributeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ErlangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttribute(this);
}


antlrcpp::Any ErlangParser::AttributeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ErlangVisitor*>(visitor))
    return parserVisitor->visitAttribute(this);
  else
    return visitor->visitChildren(this);
}

ErlangParser::AttributeContext* ErlangParser::attribute() {
  AttributeContext *_localctx = _tracker.createInstance<AttributeContext>(_ctx, getState());
  enterRule(_localctx, 16, ErlangParser::RuleAttribute);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(237);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(221);
      match(ErlangParser::TokMinus);
      setState(222);
      tokAtom();
      setState(223);
      attrVal();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(225);
      match(ErlangParser::TokMinus);
      setState(226);
      tokAtom();
      setState(227);
      typedAttrVal();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(229);
      match(ErlangParser::TokMinus);
      setState(230);
      tokAtom();
      setState(231);
      match(ErlangParser::TokParenOpen);
      setState(232);
      typedAttrVal();
      setState(233);
      match(ErlangParser::TokParenClose);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(235);
      match(ErlangParser::TokAttrName);
      setState(236);
      typeSpec();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeSpecContext ------------------------------------------------------------------

ErlangParser::TypeSpecContext::TypeSpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ErlangParser::SpecFunContext* ErlangParser::TypeSpecContext::specFun() {
  return getRuleContext<ErlangParser::SpecFunContext>(0);
}

ErlangParser::TypeSigsContext* ErlangParser::TypeSpecContext::typeSigs() {
  return getRuleContext<ErlangParser::TypeSigsContext>(0);
}

tree::TerminalNode* ErlangParser::TypeSpecContext::TokParenOpen() {
  return getToken(ErlangParser::TokParenOpen, 0);
}
